<resources>
    <string name="app_name">ASDF</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_ammo">TEXT VIEW AMMO</string>
    <string name="text_view_condition">TEXT VIEW CONDITION</string>
    <string name="title_activity_maps">Map</string>
    <string name="condition">Condition</string>
    <string name="ammunition">Ammunition</string>
    <string name="_100">100</string>
    <string name="_90">90</string>
    <string name="send_file">Kirim berkas</string>
    <string name="chat">Chat</string>
    <string name="communication">Communication</string>
    <string name="menu">Menu</string>
    <string name="health">Health</string>
    <string name="status">Status</string>
    <string name="map">Peta</string>
    <string name="button_pick_file">Please pick the file you want to send</string>
    <string name="button_send_file">SEND THE FILE</string>

    <string-array name="soulja_conditions">
        <item>100</item>
        <item>80</item>
        <item>60</item>
        <item>40</item>
        <item>20</item>
        <item>0</item>
    </string-array>
    <string name="title_activity_wus_dat">WusDat</string>
    <string name="wut">wut</string>
    <string name="name_of_file">Name</string>
    <string name="upload_progress">Upload progress: %s</string>
    <string name="cancel_upload">Cancel upload</string>
    <string name="kondisi">Kondisi</string>
    <string name="connect">Sambung</string>
    <string name="disconnect">Putus</string>
    <string name="edit">Ubah</string>
    <string name="delete">Hapus</string>
    <string name="message_not_connected">belum nyambung.</string>
    <string name="chat_only_from_channel">Hanya bisa chat melalui channel.</string>
</resources>
