<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="Home">
            <menu>
                <item
                    android:id="@+id/nav_home_map"
                    android:title="@string/map"/>
            </menu>
        </item>
        <item android:title="@string/condition">
            <menu>
                <item
                    android:id="@+id/nav_condition_health"
                    android:title="@string/health"/>
                <item
                    android:id="@+id/nav_condition_ammunition"
                    android:title="@string/ammunition"/>
            </menu>
        </item>
        <item android:title="@string/menu">
            <menu>
                <item
                    android:id="@+id/nav_condition"
                    android:title="@string/condition"/>
            </menu>
        </item>
        <item android:title="@string/communication">
            <menu>
                <item
                    android:id="@+id/nav_communication_chat"
                    android:title="@string/chat"/>
                <item
                    android:id="@+id/nav_communicator_send_file"
                    android:title="@string/send_file"/>
            </menu>
        </item>
    </group>
</menu>