<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ConditionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relative_atas"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/condition_text_placement"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/condition" />
            <TextView
                android:id="@+id/text_view_condition"
                android:text="@string/_100"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/condition_seek_bar_placement"
            android:layout_below="@id/condition_text_placement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <SeekBar
                android:id="@+id/seek_bar_condition"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/condition_seek_bar_placement"
            android:id="@+id/ammunition_text_placement"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ammunition" />
            <TextView
                android:id="@+id/text_view_ammunition"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/_90"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_below="@id/ammunition_text_placement"
            android:layout_height="wrap_content">
            <SeekBar
                android:paddingTop="20dp"
                android:id="@+id/seek_bar_ammunition"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
